added views and like

--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -102,10 +102,10 @@
     },
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "Integrating real time web cam with gemini",
+      "name": "Integrating canva with gemini",
       "createdAt": "2021-01-01T08:31:51Z",
-      "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
+      "url": "https://www.linkedin.com/posts/bejawada-sai-mahendra-b18289212_aipainting-creativetech-geminiapi-activity-7273203565580431360-TcIc?utm_source=share&utm_medium=member_desktop&rcm=ACoAADXKQwQBs9a1qPRyPJ2PgDzhyfVWvVNbjFM",
+      "description": "🚀 Smooth canva board with gemini ai integration.",
       "isFork": false,
       "languages": [
         {
